--- a/akademik.html
+++ b/akademik.html
@@ -706,7 +706,7 @@
                     <a class="pill" href="#" data-subject="prt"><span class="pillDot"></span>Pertanian</a>
                     <a class="pill" href="#" data-subject="per"><span class="pillDot"></span>Perniagaan</a>
                     <a class="pill" href="#" data-subject="eko"><span class="pillDot"></span>Ekonomi</a>
-                    <a class="pill" href="#" data-subject="akl"><span class="pillDot"></span>Asas Kelestarian</a>
+                    <a class="pill" href="#" data-subject="ak"><span class="pillDot"></span>Asas Kelestarian</a>
                     <a class="pill" href="#" data-subject="kdp"><span class="pillDot"></span>Katering dan Penyajian</a>
                     <a class="pill" href="#" data-subject="ldn"><span class="pillDot"></span>Landskap dan Nursery</a>
                     <a class="pill" href="#" data-subject="rbt"><span class="pillDot"></span>RBT</a>
@@ -937,7 +937,7 @@
       prt: "Pertanian",
       per: "Perniagaan",
       eko: "Ekonomi",
-      ak: "Asas Kelastarian",
+      ak: "Asas Kelestarian",
       ldn: "Landskap dan Nursery",
       rbt: "RBT",
     };
@@ -1144,9 +1144,6 @@
         perancangan: "https://drive.google.com/drive/folders/171pm2x3EYAyixXr3g2HTuenl8cz4k0Yr?usp=drive_link",
         kewangan: "https://drive.google.com/drive/folders/1rOWshS-ZmWmbSZElL7t5bZ3ZtQsnC9q2?usp=drive_link",
       },
-    
-      // add the rest as needed (same structure)
-      pn: {}, rbt: {}, pvma: {}, rek: {}, tvet2: {}
     };
     
     const badgeText = document.getElementById("badgeText");
