--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
   <div class="bg"><div class="grid"></div></div>
   <div class="pageTrans" id="pageTrans"></div>
 
+    <header class="topbar">
+    <div class="brand">
+      <div class="mark">◆</div>
+      <div>
+        <div>Dashboard SMKG</div>
+        <div class="sub">Showcase • Dashboard</div>
+      </div>
+    </div>
   
     <nav class="navlinks">
       <a href="akademik.html" data-trans="true">Pengurusan</a>
